--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,9 @@
       "bootstrap.php"
     ]
   },
+  "require-dev": {
+    "wp-cli/i18n-command": "^2.6.3"
+  },
   "require": {
     "newfold-labs/wp-module-data": "^2.0.0",
     "wpscholar/url": "^1.2",
