--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,17 @@
     "wpscholar/url": "^1.2",
     "wp-forge/helpers": "^2.0",
     "wp-forge/collection": "^1.0"
+  },
+  "scripts": {
+    "i18n-pot": "vendor/bin/wp i18n make-pot . ./languages/wp-module-notifications.pot --headers='{\"Report-Msgid-Bugs-To\":\"https://github.com/newfold-labs/wp-module-notifications/issues\",\"POT-Creation-Date\":\"2025-02-13T09:55:55+00:00\"}'",
+    "i18n-po": "vendor/bin/wp i18n update-po ./languages/wp-module-notifications.pot ./languages",
+    "i18n-mo": "vendor/bin/wp i18n make-mo ./languages",
+    "i18n-json": "rm -f languages/*.json && vendor/bin/wp i18n make-json ./languages --no-purge --pretty-print",
+    "i18n": [
+      "@i18n-pot",
+      "@i18n-po",
+      "@i18n-mo",
+      "@i18n-json"
+    ]
   }
 }
