--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,7 @@
     ]
   },
   "require-dev": {
-    "newfold-labs/wp-php-standards": "^1.2",
-    "wp-cli/i18n-command": "^2.6.3"
+    "newfold-labs/wp-php-standards": "^1.2"
   },
   "require": {
     "newfold-labs/wp-module-data": "^2.0.0",
@@ -47,18 +46,6 @@
   },
   "scripts": {
     "fix": "vendor/bin/phpcbf --standard=phpcs.xml .",
-    "i18n-pot": "vendor/bin/wp i18n make-pot . ./languages/wp-module-notifications.pot --headers='{\"Report-Msgid-Bugs-To\":\"https://github.com/newfold-labs/wp-module-notifications/issues\",\"POT-Creation-Date\":\"2025-02-13T09:55:55+00:00\"}'",
-    "i18n-po": "vendor/bin/wp i18n update-po ./languages/wp-module-notifications.pot ./languages",
-    "i18n-mo": "vendor/bin/wp i18n make-mo ./languages",
-    "i18n-php": "vendor/bin/wp i18n make-php ./languages",
-    "i18n-json": "rm -f languages/*.json && vendor/bin/wp i18n make-json ./languages --no-purge --pretty-print",
-    "i18n": [
-      "@i18n-pot",
-      "@i18n-po",
-      "@i18n-mo",
-      "@i18n-php",
-      "@i18n-json"
-    ],
     "lint": "vendor/bin/phpcs --standard=phpcs.xml -s ."
   },
   "config": {
