--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,25 @@
       "bootstrap.php"
     ]
   },
+  "require-dev": {
+    "newfold-labs/wp-php-standards": "^1.2"
+  },
   "require": {
     "newfold-labs/wp-module-data": "^2.0.0",
     "wpscholar/url": "^1.2",
     "wp-forge/helpers": "^2.0",
     "wp-forge/collection": "^1.0"
+  },
+  "scripts": {
+    "fix": "vendor/bin/phpcbf --standard=phpcs.xml .",
+    "lint": "vendor/bin/phpcs --standard=phpcs.xml -s ."
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    },
+    "platform": {
+      "php": "7.3.0"
+    }
   }
 }
