--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "wp-module-notifications",
   "version": "1.6.11",
+  "engines": {
+    "node": ">=22.11.0",
+    "npm": ">=10.9.0"
+  },
   "devDependencies": {
     "@wordpress/env": "^10.22.0"
   }
