--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
-    target-branch: "develop"
+    target-branch: "main"
     allow:
       - dependency-type: direct
     schedule:
@@ -18,7 +18,7 @@ updates:
   # Maintain dependencies for Composer
   - package-ecosystem: "composer"
     directory: "/"
-    target-branch: "develop"
+    target-branch: "main"
     schedule:
       interval: "daily"
     allow:
