Add npm dependency maintenance configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,23 @@ updates:
     labels:
       - "dependencies"
 
+  # Maintain dependencies for npm
+  - package-ecosystem: "npm"
+    directory: "/"
+    target-branch: "main"
+    allow:
+      - dependency-type: direct
+    schedule:
+      interval: "daily"
+    versioning-strategy: increase
+    commit-message:
+      prefix: "NPM"
+      prefix-development: "NPM Dev"
+      include: "scope"
+    labels:
+      - "dependencies"
+      - "javascript"
+
   # Maintain dependencies for Composer
   - package-ecosystem: "composer"
     directory: "/"
